(#329) Create right_http_connection release branch for 1_1_0 (now on RubyForge)
git-svn-id: https://wush.net/svn/rightscale/right_http_connection/trunk@1512 9f0cbaf6-ce18-0410-ad37-d14a22affa91

--- a/History.txt
+++ b/History.txt
@@ -25,3 +25,6 @@ r1411 | todd | 2007-08-03 15:14:45 -0700 (Fri, 03 Aug 2007) | 3 lines
 (#373) Stream uploads (PUTs) if the source is a file, stream, or anything
 read()-able
 
++++ 1.1.0 2007-08-15
+Initial public release
+
