right_http_connection, History fix
git-svn-id: https://wush.net/svn/rightscale/right_http_connection/trunk@2649 9f0cbaf6-ce18-0410-ad37-d14a22affa91

--- a/History.txt
+++ b/History.txt
@@ -31,6 +31,6 @@ Initial public release
 
 == 1.2.1
 
-* r????, konstantin, 01-24-08 11:12:00
+* r2648, konstantin, 01-24-08 11:12:00
   * net_fix.rb moved from right_aws gem to fix the problem with uploading the streamable
     objects to S3
