#1051, right_http_connection: :http_connection_* values edition added 1. HttpConnection.params && HttpConnection.new now supports :http_connection_retry_count, :http_connection_open_timeout, :http_connection_read_timeout, :http_connection_retry_delay 2. [3523] fix removed (that was not a bug)
git-svn-id: https://wush.net/svn/rightscale/right_http_connection/trunk@3796 9f0cbaf6-ce18-0410-ad37-d14a22affa91

--- a/History.txt
+++ b/History.txt
@@ -40,7 +40,9 @@ Initial public release
     patch was overriden (by attachment_fu for example, to avoid this load attachment_fu 
     before loading the right_http_connection gem).
 
+== 1.2.2
+
 *  r3524, konstantin, 2008-04-17 11:35:42 +0400
-  Fixed a problem with incorrect error handling (connection retries always failed).
-  
-    
+  * Fixed a problem with incorrect error handling (connection retries always failed).
+
+== 1.2.3
