#1380: Prepare history & docs for release 1.2.3
git-svn-id: https://wush.net/svn/rightscale/right_http_connection/trunk@4424 9f0cbaf6-ce18-0410-ad37-d14a22affa91

--- a/History.txt
+++ b/History.txt
@@ -46,3 +46,7 @@ Initial public release
   * Fixed a problem with incorrect error handling (connection retries always failed).
 
 == 1.2.3
+
+- Added support for setting retry & timeout parameters in the constructor
+- Improve handling of data streams during upload: if there is a failure and a retry, reset
+  the seek pointer for the subsequent re-request
