#1576, right_http_connection: "You have a nil object when you didnt expect it! The error occurred while evaluating nil.body_stream" exception fix
git-svn-id: https://wush.net/svn/rightscale/right_http_connection/trunk@4984 9f0cbaf6-ce18-0410-ad37-d14a22affa91

--- a/History.txt
+++ b/History.txt
@@ -50,3 +50,9 @@ Initial public release
 - Added support for setting retry & timeout parameters in the constructor
 - Improve handling of data streams during upload: if there is a failure and a retry, reset
   the seek pointer for the subsequent re-request
+
+== 1.2.4 
+
+- fixed a bug: <NoMethodError: You have a nil object when you didn't expect it!
+                The error occurred while evaluating nil.body_stream>
+
