--- a/History.txt
+++ b/History.txt
@@ -57,6 +57,30 @@ Initial public release
   * fixed a bug: <NoMethodError: You have a nil object when you didn't expect it!
                   The error occurred while evaluating nil.body_stream>
 
-== 1.2.5 (not released yet)
+== 1.2.5
 
 - ActiveSupport dependency removal 
+
+
+== 1.3.0
+ - Added:
+   - support for using through proxies
+   - functional tests
+
+== 1.3.1
+ - Added:
+   - SSL certificate handshake support
+   - more specs
+   - ability to give client side key and certificate inline
+ - Fixed: some minor glitches
+
+== 1.4.0
+  - Added
+    - license
+    - HTTP_PROXY env variable support
+  - Fixed
+    - context-length issue (thx kristianm)
+    - exception handling
+    - connection is now closed on any exception
+    - connection is reestablished when credentials change
+    - some other minor bugs
